Fixed comments section on small media query

--- a/style.css
+++ b/style.css
@@ -900,6 +900,7 @@ article iframe, article video, article embed {
     .column.colSize5 {
         max-width: 100%;
         width: auto;
+        display: block;
     }
 
     .columnContainer {
